# agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: cd.yaml  ci.yaml  nightly.yaml  rust.yml
docs/diagrams/: sequence.puml
src/: action.rs  agent.rs  job.rs  main.rs  report.rs  task.rs  tool.rs
src/api/: client.rs  error.rs  mod.rs  types.rs
