[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
log = "0.4.27"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
signal-hook = "0.3.18"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
url = "2.5.5"
spdlog-rs = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
gethostname = "1.0.2"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
